# openmetrics-rs

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
examples/get-metric/: .gitignore  Cargo.toml
examples/get-metric/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  metric_grammar.pest  metrics.rs
src/: main.rs  metric.pest  metrics.rs
